feat: Step 3 - Django 프로젝트 초기화 및 앱 생성

--- a/jin/requirements.txt
+++ b/jin/requirements.txt
@@ -21,7 +21,7 @@ chromadb==0.4.15
 
 # PDF processing
 PyPDF2==3.0.1
-PyMuPDF==1.23.8          # PDF 텍스트 추출 (PyPDF2보다 강력함)
+PyMuPDF==1.23.8
 python-docx==0.8.11
 
 # HTTP requests
