Step 5-2: UpstageEmbeddings 통합 및 환경변수 관리 개선

--- a/jin/requirements.txt
+++ b/jin/requirements.txt
@@ -29,6 +29,7 @@ requests==2.31.0
 
 # Environment variables
 python-dotenv==1.0.0
+python-decouple==3.8
 
 # Additional utilities
 python-dateutil==2.8.2 
