--- a/jin/requirements.txt
+++ b/jin/requirements.txt
@@ -14,8 +14,11 @@ pandas==2.0.3
 numpy==1.24.3
 
 # RAG/LLM packages
-openai==0.28.1
-langchain==0.0.267
+openai>=1.6.1
+langchain>=0.1.0
+langchain-openai>=0.0.2
+langchain-upstage>=0.7.1
+langchain-community>=0.0.10
 pinecone-client==2.2.4
 chromadb==0.4.15
 
