--- a/jin/requirements.txt
+++ b/jin/requirements.txt
@@ -1,17 +1,17 @@
-# Django and REST Framework
+# Django & REST Framework
 Django==4.2.7
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
 django-cors-headers==4.3.1
 
 # Database
-mysqlclient==2.2.0
+psycopg2-binary==2.9.7
 
-# ML/AI packages
-scikit-learn==1.3.0
-xgboost==1.7.6
-pandas==2.0.3
-numpy==1.24.3
+# Environment & Configuration
+python-decouple==3.8
+
+# File Processing
+PyPDF2==3.0.1
+python-docx==0.8.11
 
 # RAG/LLM packages
 openai>=1.6.1
@@ -22,17 +22,11 @@ langchain-community>=0.0.10
 pinecone-client==2.2.4
 chromadb==0.4.15
 
-# PDF processing
-PyPDF2==3.0.1
-PyMuPDF==1.23.8
-python-docx==0.8.11
+# ML & Data Science
+scikit-learn>=1.3.0
+pandas>=2.0.0
+numpy>=1.24.0
 
-# HTTP requests
+# Utilities
 requests==2.31.0
-
-# Environment variables
-python-dotenv==1.0.0
-python-decouple==3.8
-
-# Additional utilities
-python-dateutil==2.8.2 
+python-dotenv==1.0.0 
