--- a/jin/requirements.txt
+++ b/jin/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==4.3.1
 
 # Database
 psycopg2-binary==2.9.7
+mysqlclient==2.2.0
 
 # Environment & Configuration
 python-decouple==3.8
